--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -1,9 +1,31 @@
 <head>
-<script type="module">
-  import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo@v7';
-</script>
+  <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+  <script type="module">
+    import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo@v7';
+  </script>
 </head>
+<header>
+  <h1>Turbo Examples</h1>
+</header>
+<main>
+  <section>
+    <header>
+    <h2>Turbo-frame default case</h2>
+    </header>
+    <turbo-frame id="case1">
+      <a href="/case1"><b>Click me!</b></a>
+    </turbo-frame>
 
-<h1>Turbo Example</h1>
+  </section>
+  <hr />
+  <section>
+    <header><h2>Target a turbo-frame</h2></header>
 
-
+  <a href="/case2" data-turbo-frame="case2"><b>Load content in following box</b></a> <br>
+  <aside>
+    <turbo-frame id="case2">
+      <progress id="progress-bar" aria-label="Content loading…"></progress>
+    </turbo-frame>
+  </aside>
+  </section>
+</main>
