--- a/views/turbo.html.erb
+++ b/views/turbo.html.erb
@@ -1,27 +1,36 @@
 <head>
-  <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-  <script type="module">
-    import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo@v7';
-  </script>
+  <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
 </head>
+
 <header>
+  <nav>
+    <ul>
+      <li><a href="/turbo">Turbo</a></li>
+      <li><a href="/stimulus">Stimulus</a></li>
+    </ul>
+  </nav>
+
   <h1>Turbo Frame Examples</h1>
+  <p>The following sections are basic examples on how to use Turbo. For more details, see <a href="https://turbo.hotwired.dev/handbook/introduction">the documentation</a>.</p>
 </header>
 <main>
+  <hr />
   <section>
     <header>
-    <h2>Turbo-frame default usage: links</h2>
+      <h2>Turbo-frame default usage: links</h2>
+      <p>Wrap a block with the <code>turbo-frame</code> tag, have your response return the same tag and id and refresh parts of your DOM, no JS required.</p>
     </header>
+
     <turbo-frame id="case1">
       <a href="/case1"><b>Click me!</b></a>
     </turbo-frame>
-
   </section>
 
-  <hr  />
+  <hr />
   <section>
     <header>
       <h2>Turbo-frame default usage: forms</h2>
+      <p>Wrap a form in a <code>turbo-frame</code> tag and the response of submitting the form will replace the frame. Redirects are followed.</p>
     </header>
 
     <turbo-frame id="form">
@@ -35,8 +44,12 @@
 
   <hr />
   <section>
-    <header><h2>Target a turbo-frame</h2></header>
-    <a href="/case2" data-turbo-frame="case2"><b>Load content in following box</b></a> <br>
+    <header>
+      <h2>Target a turbo-frame</h2>
+      <p>Add <code>data-turbo-frame</code> to load the response into a <code>turbo-frame</code> somewhere else on the DOM.</p>
+    </header>
+
+    <a href="/case2" data-turbo-frame="case2"><b>Load content in following box</b></a> <br />
     <aside>
       <turbo-frame id="case2">
         <progress id="progress-bar" aria-label="Content loading…"></progress>
@@ -46,17 +59,23 @@
 
   <hr />
   <section>
-    <header><h2>Drive with caching example</h2></header>
+    <header>
+      <h2>Drive with caching example</h2>
+      <p>With Turbo Drive enabled, all page transitions are cached (and with Turbo 8, hovered links are preloaded). So visiting a page a second time will load from cache, not the server.</p>
+    </header>
 
     <a href="/drive-caching">Go to page 2</a>
   </section>
 
   <hr />
   <section>
+    <header>
+      <h2>Overriding targets</h2>
+      <p>Responses can override targets</p>
+    </header>
+
     <turbo-frame id="messages" target="_top">
-      <a href="/messages/1">
-        Following link will replace the whole page, not this frame.
-      </a><br />
+      <a href="/messages/1"> Following link will replace the whole page, not this frame. </a><br />
 
       <a href="/messages/1" data-turbo-frame="_self">
         Following link will replace just this frame.
@@ -66,10 +85,12 @@
 
   <hr />
   <section>
-    <header><h2>Experiment: return 2 frames</h2></header>
+    <header>
+      <h2>Experiment: return 2 frames</h2>
+    </header>
     <turbo-frame id="frame1">
       <aside>
-      <a href="test"><b>Fire the bombs!</b></a>
+        <a href="test"><b>Fire the bombs!</b></a>
       </aside>
     </turbo-frame>
     <turbo-frame id="frame2"><aside>War never changes</aside></turbo-frame>
